code/kubes/signal/k8s/04-ingester.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signal-ingester
  namespace: signal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signal-ingester
  template:
    metadata:
      labels:
        app: signal-ingester
    spec:
      containers:
        - name: ingester
          image: xinutec/signal-archiver:latest
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
